--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "test": "npm run lint",
     "lint": "eslint . --max-warnings 0 --ignore-path .eslintignore"
   },
+  "bin": {
+    "statsd-daemon": "src/index.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Q42Philips/statsd-daemon.git"
