add color coding of output + timestamp to discern lots of same samples

--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
   "homepage": "https://github.com/Q42Philips/statsd-daemon#readme",
   "devDependencies": {
     "eslint": "^3.19.0"
+  },
+  "dependencies": {
+    "chalk": "^1.1.3"
   }
 }
