--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint": "^3.19.0"
   },
   "dependencies": {
-    "chalk": "^1.1.3"
+    "chalk": "^1.1.3",
+    "update-notifier": "^2.1.0"
   }
 }
