--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
-    "test": "npm run lint",
-    "lint": "eslint . --max-warnings 0 --ignore-path .eslintignore"
+    "test": "yarn lint",
+    "lint": "eslint . --max-warnings 0 --ignore-path .eslintignore",
+    "preinstall": "node -e \"if (process.env.npm_execpath.indexOf('yarn') === -1) throw new Error('Use yarn for installing: https://yarnpkg.com/en/docs/install')\""
   },
   "bin": {
     "statsd-daemon": "src/index.js"
