--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
-    "test": "yarn lint",
+    "test": "npm run lint",
     "lint": "eslint . --max-warnings 0 --ignore-path .eslintignore"
   },
   "bin": {
